--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,11 @@ flutter:
     - assets/logo/dono-logo.png
     - assets/images/img_usr.png
     - assets/images/test.jpg
+    - assets/images/5.jpg
+    - assets/images/4.jpg
+    - assets/images/3.jpg
+    - assets/images/2.jpg
+    - assets/images/1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
