--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_screenutil: ^5.9.0
   flutter_launcher_icons: ^0.13.1
   shared_preferences: ^2.2.2
   percent_indicator: ^4.0.1
@@ -73,7 +74,7 @@ flutter:
     - assets/logo/dono-logo.png
     - assets/images/img_usr.png
     - assets/images/test.jpg
-
+    - assets/images/testqr.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
