--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -11,9 +11,9 @@
 	<key>BUNDLE_ID</key>
 	<string>com.example.Donobox</string>
 	<key>PROJECT_ID</key>
-	<string>donobox-2024</string>
+	<string>Donobox-2024</string>
 	<key>STORAGE_BUCKET</key>
-	<string>donobox-2024.appspot.com</string>
+	<string>Donobox-2024.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
