--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -2,6 +2,6 @@
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
   "GOOGLE_APP_ID": "1:1012299080197:ios:a9193e1d6d57e2d6c2326c",
-  "FIREBASE_PROJECT_ID": "donobox-2024",
+  "FIREBASE_PROJECT_ID": "Donobox-2024",
   "GCM_SENDER_ID": "1012299080197"
 }
