--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.14.0
   flutter_screenutil: ^5.9.0
   flutter_launcher_icons: ^0.13.1
   shared_preferences: ^2.2.2
@@ -46,6 +47,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   firebase_ui_auth: ^1.10.0
+  
   
 
 dev_dependencies:
