--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1012299080197:ios:3cf4cafa7e670ffbc2326c",
-  "FIREBASE_PROJECT_ID": "Donobox-2024",
-  "GCM_SENDER_ID": "1012299080197"
+  "GOOGLE_APP_ID": "1:957388472374:ios:3c345890e8f852a386d897",
+  "FIREBASE_PROJECT_ID": "donobox-9e4c6",
+  "GCM_SENDER_ID": "957388472374"
 }
