--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^4.14.0
   flutter_screenutil: ^5.9.0
   flutter_launcher_icons: ^0.13.1
   shared_preferences: ^2.2.2
@@ -47,6 +46,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
+  image_picker: ^1.0.7
   
   
 
