--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   image_picker: ^1.0.7
+  dropdown_search: ^5.0.6
+  firebase_storage: ^11.6.0
   
   
 
