--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^1.0.7
   dropdown_search: ^5.0.6
   firebase_storage: ^11.6.0
+  ionicons: ^0.2.2
   
   
 
@@ -89,6 +90,7 @@ flutter:
     - assets/images/3.jpg
     - assets/images/2.jpg
     - assets/images/1.jpg
+    - assets/images/avatarimg.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
