--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_storage: ^11.6.0
   ionicons: ^0.2.2
   google_fonts: 6.1.0
+  paytm_allinonesdk: ^1.2.4
   
 
 dev_dependencies:
